...
internal val previewLocations = listOf(
    Location(
        id = 1L,
        countryId = 1L,
        parentId = null,
        regionCode = "KR-11",
        name = "서울특별시",
        type = LocationType.PROVINCE,
    ),
    Location(
        id = 2L,
        countryId = 1L,
        parentId = 1L,
        regionCode = "11680",
        name = "강남구",
        type = LocationType.DISTRICT,
    ),
    Location(
        id = 3L,
        countryId = 1L,
        parentId = 1L,
...
